--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -2,9 +2,10 @@ name: allengayCx Security Tweets
 
 # Controls when the workflow will run
 on:
-  #pull_request:
+  pull_request:
   #  types: [opened, reopened, synchronize]
-  #  branches: [ "main" ]
+    branches: 
+      - main
   #push: 
   #    branches:
   #    - main
