--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -10,7 +10,7 @@ on:
 permissions:
   contents: read
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel 1
 jobs:
   # This workflow contains a single job called "build"
   build:
