--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -1,6 +1,6 @@
 name: allengayCx Security Tweets
 
-# Controls when the workflow will run
+# Controls when the workflow will run 1
 on:
   pull_request:
     branches: 
