--- a/.github/workflows/testfire_dast_cli_scan.yaml
+++ b/.github/workflows/testfire_dast_cli_scan.yaml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v3
     # Scan
     - name: Checkmarx DAST Github Action
-      uses: Checkmarx/dast-github-action@v1.0.2
+      uses: Checkmarx/dast-action@latest
       env:
         CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
