--- a/.github/workflows/testfire_dast_cli_scan.yaml
+++ b/.github/workflows/testfire_dast_cli_scan.yaml
@@ -30,11 +30,11 @@ jobs:
       env:
         CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
-        command: "web"
-        config: './testfire-web.yaml'
-        base_url: "https://eu.ast.checkmarx.net"
-        environment_id: "b59c73a9-a85b-484d-b3bb-8c8cf902f177" 
-        fail_on: "HIGH"
+        command: web
+        config: ./testfire-web.yaml
+        base_url: https://eu.ast.checkmarx.net/ 
+        environment_id: b59c73a9-a85b-484d-b3bb-8c8cf902f177
+        fail_on: HIGH
         verbose: true
         output: ./output
     - name: Reclaim output directory  
