--- a/.github/workflows/testfire_dast_cli_scan.yaml
+++ b/.github/workflows/testfire_dast_cli_scan.yaml
@@ -24,6 +24,11 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
+    # Create Output Folder
+    - name: Create Output folder
+      run: mkdir ${{ github.workspace }}/output_folder
+    - name: Change dir owner
+      run: sudo chown -R 1000:1000 ${{ github.workspace }}
     # Scan
     - name: Checkmarx DAST Github Action
       uses: Checkmarx/dast-github-action@v1.0.6
@@ -36,7 +41,8 @@ jobs:
         environment_id: b59c73a9-a85b-484d-b3bb-8c8cf902f177
         fail_on: HIGH
         verbose: true
-        output: ./output
+        timeout: 100000
+        output: ${{ github.workspace }}/output_folder
     - name: Reclaim output directory  
       if: always()  
       run: sudo chown -R 1001:1001 ${{ github.workspace }}/output
@@ -45,4 +51,4 @@ jobs:
       name: Upload Logs
       with:
         name: report
-        path: ./output
+        path: ${{ github.workspace }}/output_folder
